// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides BTS link 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class=" gatsby-image-wrapper"
          style="position: relative; overflow: hidden; width: 2rem; margin-right: 0.5rem;"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <picture>
            <img
              alt=""
              sizes=""
              src=""
              srcset=""
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
            />
          </picture>
          <noscript>
            &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
          </noscript>
        </div>
        <div
          class="sc-htpNat dJKuSC"
          data-testid="navigation-text-logo"
        >
          sprous
        </div>
      </a>
    </div>
  </nav>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class=" gatsby-image-wrapper"
          style="position: relative; overflow: hidden; width: 2rem; margin-right: 0.5rem;"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <picture>
            <img
              alt=""
              sizes=""
              src=""
              srcset=""
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
            />
          </picture>
          <noscript>
            &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
          </noscript>
        </div>
        <div
          class="sc-htpNat dJKuSC"
          data-testid="navigation-text-logo"
        >
          sprous
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje kwwer"
    >
      <div
        class="sc-bZQynM fcrezd"
      />
      <a
        class="sc-gzVnrw dHCLGK"
        data-testid="navigation-bts-link"
        href="https://github.com/vantezzen/sprous"
      >
        Back to GitHub
      </a>
    </div>
  </nav>
</div>
`;

exports[`uses BTS link config 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class=" gatsby-image-wrapper"
          style="position: relative; overflow: hidden; width: 2rem; margin-right: 0.5rem;"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <picture>
            <img
              alt=""
              sizes=""
              src=""
              srcset=""
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
            />
          </picture>
          <noscript>
            &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
          </noscript>
        </div>
        <div
          class="sc-htpNat dJKuSC"
          data-testid="navigation-text-logo"
        >
          sprous
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje kwwer"
    >
      <div
        class="sc-bZQynM fcrezd"
      />
      <a
        class="sc-gzVnrw dHCLGK"
        data-testid="navigation-bts-link"
        href="CUSTOM_HREF"
      >
        CUSTOM TITLE
      </a>
    </div>
  </nav>
</div>
`;

exports[`uses uses combined logo 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class=" gatsby-image-wrapper"
          style="position: relative; overflow: hidden; width: 2rem; margin-right: 0.5rem;"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <picture>
            <img
              alt=""
              sizes=""
              src=""
              srcset=""
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
            />
          </picture>
          <noscript>
            &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
          </noscript>
        </div>
        <div
          class="sc-htpNat dJKuSC"
          data-testid="navigation-text-logo"
        >
          sprous
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje kwwer"
    >
      <div
        class="sc-bZQynM fcrezd"
      />
      <a
        class="sc-gzVnrw dHCLGK"
        data-testid="navigation-bts-link"
        href="https://github.com/vantezzen/sprous"
      >
        Back to GitHub
      </a>
    </div>
  </nav>
</div>
`;

exports[`uses uses image logo 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class=" gatsby-image-wrapper"
          style="position: relative; overflow: hidden; width: 2rem; margin-right: 0.5rem;"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <picture>
            <img
              alt=""
              sizes=""
              src=""
              srcset=""
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center; opacity: 0; transition: opacity 0.5s;"
            />
          </picture>
          <noscript>
            &lt;picture&gt;&lt;img src="" alt="" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
          </noscript>
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje kwwer"
    >
      <div
        class="sc-bZQynM fcrezd"
      />
      <a
        class="sc-gzVnrw dHCLGK"
        data-testid="navigation-bts-link"
        href="https://github.com/vantezzen/sprous"
      >
        Back to GitHub
      </a>
    </div>
  </nav>
</div>
`;

exports[`uses uses text logo 1`] = `
<div>
  <nav
    class="sc-bdVaJa jKGWHd"
  >
    <div
      class="sc-bwzfXH eRJmGz"
    >
      <a
        href="/"
        style="text-decoration: none; display: flex; align-items: center;"
      >
        <div
          class="sc-htpNat dJKuSC"
          data-testid="navigation-text-logo"
        >
          CUSTOM TEXT LOGO
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje kwwer"
    >
      <div
        class="sc-bZQynM fcrezd"
      />
      <a
        class="sc-gzVnrw dHCLGK"
        data-testid="navigation-bts-link"
        href="https://github.com/vantezzen/sprous"
      >
        Back to GitHub
      </a>
    </div>
  </nav>
</div>
`;
